# docs/swagger.json
@@ -89,6 +89,38 @@
                 }
             }
         },
+        "/api/v1/auth/logout": {
+            "get": {
+                "description": "登出之后会把jwt加到黑名单里面去",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "登出",
+                "responses": {
+                    "200": {
+                        "description": "登出成功!",
+                        "schema": {
+                            "$ref": "#/definitions/response.Success"
+                        }
+                    },
+                    "400": {
+                        "description": "请求参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/response.Err"
+                        }
+                    },
+                    "500": {
+                        "description": "内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/response.Err"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/user/getDomain": {
             "get": {
                 "produces": [
@@ -352,19 +384,22 @@
                         "type": "string",
                         "description": "领域，选择性参数",
                         "name": "domain",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "integer",
                         "description": "分页参数表示这是第几页",
                         "name": "page",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "integer",
                         "description": "每页返回的用户数量，建议一次返回10个",
                         "name": "page_size",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
